# mopidy-scrobbler

./: .copier-answers.yml  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml
mopidy_scrobbler/: __init__.py  ext.conf  frontend.py
src/mopidy_scrobbler/: __init__.py  ext.conf  frontend.py  types.py
tests/: test_extension.py  test_frontend.py
